# kinetic-toolbox

./: .gitignore  .gitmodules  CMakeLists.txt  KKProfiles.h  Kinetic.h  README.txt  beattracker.cpp  hop.cpp  kinMidiFileReader.java  kin_Edistance.cpp  kin_dtw.cpp  kin_offBeatDetector.cpp  metricgen.cpp  reduceChord.cpp  synquepate.cpp  tonality.cpp
Clippings/: RHYTHMICATOR.maxpat
DemoApps/: 4xDrumsINIT.xml  ALLinONE.gf  ALLseperate.gf  GM.gf  Rhythmicator_Demo2.maxpat
Kinetic_abstractions/: kin.PrimeFactors.maxpat  kin.factors2levels.maxpat  kin.looper.maxpat  kin.stratify.maxpat  list.swapellements.maxpat
Kinetic_helpfiles/: kin.Edistance.maxhelp  kin.beattracker.maxhelp  kin.factors2levels.maxhelp  kin.hop.maxhelp  kin.offBeatDetector.maxhelp  kin.primeFactors.maxhelp  kin.reduceChord.maxhelp  kin.sequencer.maxhelp  kin.stratify.maxhelp  kin.tonality.maxhelp  kin.weights.maxhelp
devices/: Rhythmicator.amxd
examples/: Rhythmicator_Demo1.maxpat  SyncopationMeasure.maxpat  kin.recombinator.maxpat
help/: kin.MIDIFileReader.maxhelp  kin.dtw.maxhelp  kin.looper.maxhelp  list.swapellements.maxhelp
jsui/: RadialCtrl.js
kin.beattracker/: CMakeLists.txt
kin.dtw/: CMakeLists.txt
kin.edistance/: CMakeLists.txt
kin.offBeatDetector/: CMakeLists.txt
kin.sequencer/: CMakeLists.txt
kin.tonality/: CMakeLists.txt
kin.weights/: CMakeLists.txt
patchers/: kin.Transport.maxpat  kin.rhythmicator.maxpat
source/: kin-pretarget.cmake
source/kin.edistance/: CMakeLists.txt
src/: PsiFunctions.h  beattracker.cpp  kin_Edistance.cpp  kin_offBeatDetector.cpp  (+1 more)
(+31 files in other folders)
